0030958: BRepOffsetAPI_ThruSections operation raises an exception while building history

Correct methods Build and Generated:
use BRepTools_WireExplorer instead of TopExp_Explorer or TopoDS_Iterator, for compatibility with previous computations.